--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta content="telephone=no,email=no" name="format-detection" />
     <meta
       name="viewport"
-      content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
+      content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover"
     />
     <meta name="applicable-device" content="pc,mobile" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
