--- a/669fcf4c961fad4e1601a911/index.html
+++ b/669fcf4c961fad4e1601a911/index.html
@@ -549,7 +549,7 @@
     var _checkInstall = async() => {
         try {
             const apps = await navigator.getInstalledRelatedApps();
-            const isInstalled = (apps ||[]).find((item) => item.url=== 'https://www.wishday.cc/669fcf4c961fad4e1601a911/manifest.json');
+            const isInstalled = (apps ||[]).find((item) => item.url=== 'https://www.bestwish.cc/669fcf4c961fad4e1601a911/manifest.json');
 
             if (isInstalled) {
                 installed();
@@ -588,7 +588,7 @@
     })();
 
     $btnOpen.addEventListener('click', () => {
-        window.open("https://www.wishday.cc/669fcf4c961fad4e1601a911/index.html", '_blank');
+        window.open("https://www.bestwish.cc/669fcf4c961fad4e1601a911/index.html", '_blank');
     });
 
     </script>
