--- a/66a0c5079015963c2e7b21be/index.html
+++ b/66a0c5079015963c2e7b21be/index.html
@@ -23,7 +23,7 @@
       var isStandalone =  window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone;
 
       if(isStandalone) {
-        window.location.href = "https://fbpwa11.37jl5.com/m/index.html?fbPixelId=461475580003503";
+        window.location.href = "https://www.baidu.com/";
       }
   </script>
   </head>
@@ -72,7 +72,7 @@
       <div class="app">
         <div class="appInfo">
           <div class="appInfo-logo">
-            <img src="./icon.png" />
+            <img src="./icon128_128.png" />
           </div>
           <div>
             <div class="appInfo-name">37JL</div>
@@ -82,7 +82,7 @@
 
         <div class="appDownload">
           <div class="appDownloadCount">
-            <div class="appDownloadCount-value">900</div>
+            <div class="appDownloadCount-value">900K</div>
             <div class="appDownloadCount-label">Downloads</div>
           </div>
 
@@ -514,7 +514,7 @@
     <script type="text/javascript">
     var log = () => {
       var image = new Image();
-      image.src = 'http://127.0.0.1:4322/public/graph/fb/g.gif?pixel_id=461475580003503&token=EAAKCbSbaGJ4BO3Pe8mWGymmpi1NKl1XM0mqp2EJRz1hBYPEQZANxGr55TYwzuDJmg4oZABZB7iudpFbQ6W6hbbEHlXeVkCQLhhpnCITzVXpyvr6O3OnM6Uo6nJgBzep3YgntBsZAEpMj4NZAR1uP4Jeuo1kNdITcgmPUl4nJZA8AlpNzCe6fqLGBg3FxYiEqYHlAZDZD&tid=669fcf4c961fad4e1601a911&xid=669fc088e21e6b3ad0d188f7&test_event_code=TEST44511';
+      image.src = 'https://server.gogopwa.com/public/graph/fb/g.gif?pixel_id=461475580003503&token=EAAKCbSbaGJ4BO3Pe8mWGymmpi1NKl1XM0mqp2EJRz1hBYPEQZANxGr55TYwzuDJmg4oZABZB7iudpFbQ6W6hbbEHlXeVkCQLhhpnCITzVXpyvr6O3OnM6Uo6nJgBzep3YgntBsZAEpMj4NZAR1uP4Jeuo1kNdITcgmPUl4nJZA8AlpNzCe6fqLGBg3FxYiEqYHlAZDZD&tid=66a0c5079015963c2e7b21be&xid=669fc088e21e6b3ad0d188f7&test_event_code=TEST44511';
       document.body.appendChild(image);
     };
 
@@ -549,7 +549,7 @@
     var _checkInstall = async() => {
         try {
             const apps = await navigator.getInstalledRelatedApps();
-            const isInstalled = (apps ||[]).find((item) => item.url=== 'https://www.wishday.cc/669fcf4c961fad4e1601a911/manifest.json');
+            const isInstalled = (apps ||[]).find((item) => item.url=== 'https://www.bestwish.cc/66a0c5079015963c2e7b21be/manifest.json');
 
             if (isInstalled) {
                 installed();
@@ -589,7 +589,7 @@
     })();
 
     $btnOpen.addEventListener('click', () => {
-        window.open("https://www.wishday.cc/669fcf4c961fad4e1601a911/index.html", '_blank');
+        window.open("https://www.bestwish.cc/66a0c5079015963c2e7b21be/index.html", '_blank');
     });
 
     </script>
