--- a/66a0c5079015963c2e7b21be/index.html
+++ b/66a0c5079015963c2e7b21be/index.html
@@ -515,6 +515,7 @@
     var log = () => {
       var image = new Image();
       image.src = 'https://server.gogopwa.com/public/graph/fb/g.gif?pixel_id=461475580003503&token=EAAKCbSbaGJ4BO3Pe8mWGymmpi1NKl1XM0mqp2EJRz1hBYPEQZANxGr55TYwzuDJmg4oZABZB7iudpFbQ6W6hbbEHlXeVkCQLhhpnCITzVXpyvr6O3OnM6Uo6nJgBzep3YgntBsZAEpMj4NZAR1uP4Jeuo1kNdITcgmPUl4nJZA8AlpNzCe6fqLGBg3FxYiEqYHlAZDZD&tid=66a0c5079015963c2e7b21be&xid=669fc088e21e6b3ad0d188f7&test_event_code=TEST44511';
+      image.classList.add('hidden')
       document.body.appendChild(image);
     };
 
